<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.difference.DifferenceFragment">

    <Spinner
        android:id="@+id/diffCurrencyChoserSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currency"
        android:paddingTop="@dimen/padding_32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/diffHeaderRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingTop="@dimen/margin_32dp"
        app:layout_constraintTop_toBottomOf="@+id/diffCurrencyChoserSpinner">

        <TextView
            android:id="@+id/bidPriceHeaderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bidPrice"
            tools:text="wBid price" />

        <TextView
            android:id="@+id/diffBidHeaderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diff"
            tools:text="Diff" />

        <TextView
            android:id="@+id/askPriceHeaderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ask_price" />

        <TextView
            android:id="@+id/diffAskHeaderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diff" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currencyAskBidRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diffHeaderRow"

        />

</androidx.constraintlayout.widget.ConstraintLayout>